GNOME Bugzilla – Bug 707846
new tab menu entry lost, shortcut still works
Last modified: 2013-09-14 11:23:24 UTC
In gnome-terminal-3.9.90 (I'm on fedora 20), there is no "New Tab" menu entry, only "Open Terminal" which opens new window, "Close Tab" is still there, and tabs work with "ctrl+shift+t" shortcut.
There's no bug here. Ctrl-Shift-T opens a new terminal in a new tab by design; the menu item obeys the pref. I've renamed 'close tab' to 'close temrinal' and 'close window' to 'close all terminals' on master.