window: Rename close actions

Since we now only have a "New terminal" action, rename close tab/window to
close terminal/close all terminals.

https://bugzilla.gnome.org/show_bug.cgi?id=707846